<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeOrderActivity">

    <TextView
        android:id="@+id/textViewGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:layout_margin="8dp"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupDrinks"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <RadioGroup
        android:id="@+id/radioGroupDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdditives"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreeting">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tea" />

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/coffee" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/additives"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupDrinks" />

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxMilk"
        app:layout_constraintBottom_toTopOf="@+id/TextViewDrinkType"
        app:layout_constraintEnd_toStartOf="@id/checkBoxMilk"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBoxMilk"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toTopOf="@id/TextViewDrinkType"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditives" />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxMilk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintTop_toBottomOf="@id/checkBoxMilk"
        app:layout_constraintTop_toTopOf="@id/checkBoxMilk" />

    <TextView
        android:id="@+id/TextViewDrinkType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/choose_drink"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTea"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMilk"
        tools:layout_editor_absoluteX="8dp" />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_tea"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/makeOrderButton"
        app:layout_constraintTop_toBottomOf="@id/TextViewDrinkType" />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_coffee"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/makeOrderButton"
        app:layout_constraintTop_toBottomOf="@id/TextViewDrinkType"
        tools:visibility="visible" />

    <Button
        android:id="@+id/makeOrderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/make_order"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea"
        tools:layout_editor_absoluteX="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>